--- a/utweet/mytweet/templates/websites/mytweet.html
+++ b/utweet/mytweet/templates/websites/mytweet.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Tweet Home Page</title>
-</head>
-<body>
-    <h1>Welcome to my tweet home page</h1>
-    
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+
+<h1 class="text-center mt-3 ">Hey Welcome to home page</h1>
+{% endblock %}
